// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading color renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  color: #7D4CDB;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
    color="brand"
  />
</div>
`;

exports[`Heading level renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

.c2 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c3 {
  font-size: 22px;
  line-height: 28px;
  max-width: 528px;
  font-weight: 600;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <h2
    className="c2"
  />
  <h3
    className="c3"
  />
  <h4
    className="c4"
  />
  <h1
    className="c1"
  />
  <h2
    className="c2"
  />
  <h3
    className="c3"
  />
  <h4
    className="c4"
  />
</div>
`;

exports[`Heading margin renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 12px;
  margin-bottom: 12px;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 24px;
  margin-bottom: 24px;
}

.c3 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 48px;
  margin-bottom: 48px;
}

.c4 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-bottom: 12px;
}

.c6 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 12px;
}

.c7 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-bottom: 0;
}

.c8 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  margin-top: 0;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    margin-top: 6px;
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    margin-top: 12px;
    margin-bottom: 12px;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin-top: 24px;
    margin-bottom: 24px;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    margin-top: 0;
    margin-bottom: 0;
  }
}

@media only screen and (max-width:699px) {
  .c5 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin-top: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
  <h1
    className="c3"
  />
  <h1
    className="c4"
  />
  <h1
    className="c5"
  />
  <h1
    className="c6"
  />
  <h1
    className="c7"
  />
  <h1
    className="c8"
  />
</div>
`;

exports[`Heading renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
</div>
`;

exports[`Heading size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

.c1 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c3 {
  font-size: 82px;
  line-height: 88px;
  max-width: 1968px;
  font-weight: 600;
}

.c5 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c4 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
}

.c6 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

.c7 {
  font-size: 22px;
  line-height: 28px;
  max-width: 528px;
  font-weight: 600;
}

.c8 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
}

@media only screen and (max-width:699px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    font-size: 50px;
    line-height: 56px;
    max-width: 1200px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c5 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c9 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
    size="small"
  />
  <h1
    className="c2"
    size="medium"
  />
  <h1
    className="c3"
    size="large"
  />
  <h2
    className="c4"
    size="small"
  />
  <h2
    className="c5"
    size="medium"
  />
  <h2
    className="c6"
    size="large"
  />
  <h3
    className="c7"
    size="small"
  />
  <h3
    className="c7"
    size="medium"
  />
  <h3
    className="c8"
    size="large"
  />
  <h4
    className="c9"
    size="small"
  />
  <h4
    className="c9"
    size="medium"
  />
  <h4
    className="c9"
    size="large"
  />
</div>
`;

exports[`Heading textAlign renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  text-align: left;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  text-align: center;
}

.c3 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  text-align: right;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
  <h1
    className="c3"
  />
</div>
`;

exports[`Heading truncate renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </h1>
  <h1
    className="c2"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </h1>
</div>
`;

exports[`responsive renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
}

@media only screen and (max-width:699px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
    font-weight: 600;
  }
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
</div>
`;
